# lanraragi-satellite

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
img2vec_service/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
img2vec_service/img2vec_service/: serve.py
img2vec_service/nginx/: nginx.conf
integration/: docker-compose.yml  setup.sh  teardown.sh
integration-tests/: conftest.py  test_simple.py
integration/tests/: test_pipeline.py
satellite/: __init__.py
satellite/app/: __init__.py  auth.py  config.py  locks.py
satellite/app/routers/: archives.py  database.py  healthcheck.py  metadata.py  upload.py
satellite/app/services/: archives.py  metadata.py  upload.py
satellite/service/: database.py
satellite/utils/: file.py  image.py  scan.py  version.py
satellite/utils/lanraragi/: archive.py  client.py  constants.py  models.py  tags.py  upload.py  validation.py
src/common/: client.py
src/lanraragi/: __init__.py  client.py  constants.py  models.py  utils.py
src/lanraragi/docker_testing/: environment.py  exceptions.py
src/manycbz/: comic.py  models.py  page.py  utils.py
src/manycbz/service/: archive.py  metadata.py  page.py
src/satellite/: client.py  commands.py  models.py
src/satellite/server/: app.py  auth.py  config.py
src/satellite/server/dependencies/: common.py  database.py  metadata.py
src/satellite/server/dependencies/nhdd/: database.py  deduplication.py
src/satellite/server/routers/: archives.py  database.py  healthcheck.py  metadata.py  nhdd.py  upload.py
src/satellite/server/services/: archives.py  locks.py  metadata.py  nhdd.py  upload.py
src/satellite/service/: database.py  metadata.py  nhdd.py
src/satellite/utils/: fdiscover.py  image.py
src/satellite_server/: models.py
src/satellite_server/app/: __init__.py  auth.py
src/satellite_server/app/routers/: archives.py  database.py  healthcheck.py  metadata.py  upload.py
src/satellite_server/app/services/: archives.py  metadata.py  upload.py
src/satellite_server/service/: database.py  metadata.py
src/satellite_server/utils/: image.py  scan.py
staging/: README.md  docker-compose.yml  setup.sh  teardown.sh
tests/: test_database_service.py  test_lanraragi_tags.py
tests/lanraragi/: test_lanraragi_tags.py
tests/manycbz/: test_archive_create.py  test_metadata.py  test_page_create.py
tests/satellite/: test_utils.py
tests/satellite_server/: test_database_service.py  test_utils.py
