[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "satellite"
version = "1.1.1"
authors = [
    {name="psilabs-dev"}
]
description = "A satellite server for LANraragi to perform various tasks."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10, <3.13"
dynamic = [
    "dependencies"
]

[project.optional-dependencies]
satellite_server = [
    "aiorwlock              ==1.5.0",
    "bcrypt                 >=4.2.1,    <5.0.0",
    "fastapi",
    "numpy                  >=2.1.0,    <2.2.0",
    "uvicorn[standard]"
]

dev = [
    "pytest                 >=8.0.0",
    "tox                    >=4.23.0",
    "ruff"
]

[project.urls]
Homepage = "https://github.com/psilabs-dev/lanraragi-satellite"

[tool.ruff]
extend-select = ["ASYNC", "C4", "SIM"]
show-fixes = true
ignore = ["ASYNC230"] # use normal blocking open, aiofiles may be too slow.
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["lanraragi*", "manycbz*", "satellite_server*"]

[tool.setuptools.package-data]
manycbz = ["*.txt", "*.ttf"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
