[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "satellite"
version = "1.4.0"
authors = [
    {name="psilabs-dev"}
]
description = "A satellite server for LANraragi to perform various tasks."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12, <3.14"
dynamic = [
    "dependencies"
]

[project.optional-dependencies]
# developer dependencies
dev = [
    "docker",
    "gitpython",
    "pytest                 >=8.0.0",
    "pytest-asyncio         >=0.25.0",
    "requests               >=2.0.0",
    "tox                    >=4.23.0",
    "ruff"
]

# nhentai archive deduplication dependencies
nhdd = [
    "pgvector",
    "psycopg[binary]",
]

# satellite server dependencies
server = [
    "aiorwlock              ==1.5.0",
    "bcrypt                 >=4.2.1,    <5.0.0",
    "fastapi[standard]",
    "python-dotenv",
    "uvicorn[standard]"
]

[project.scripts]
satellite = "satellite.commands:execute_command"

[project.urls]
Homepage = "https://github.com/psilabs-dev/lanraragi-satellite"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:This process .* is multi-threaded:DeprecationWarning"
]
log_cli = true
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
extend-select = ["ASYNC", "C4", "SIM"]
show-fixes = true
ignore = ["ASYNC230"] # use normal blocking open, aiofiles may be too slow.
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["common*", "lanraragi*", "manycbz*", "satellite*"]

[tool.setuptools.package-data]
manycbz = ["*.txt", "*.ttf"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
