[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "img2vec-service"
version = "0.1.0"
authors = [
    {name="psilabs-dev"}
]
description = "Simple FastAPI server deployment of img2vec."
readme = "README.md"
dynamic = ["dependencies"]

[tool.ruff]
extend-select = ["ASYNC", "C4", "SIM"]
show-fixes = true
ignore = ["ASYNC230"] # use normal blocking open, aiofiles may be too slow.
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools]
packages = ["img2vec_service"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }